--- a/src/index.css
+++ b/src/index.css
@@ -186,3 +186,19 @@ form {
   box-shadow: 0.6vmin 0.6vmin #fff, 1vmin 1vmin #d2e4ff, 1vmin 1vmin #d2e4ff,
     0.65vmin 1vmin #d2e4ff, 1vmin 0.65vmin #d2e4ff;
 }
+
+.loading-message {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh; /* Para que ocupe toda la pantalla verticalmente */
+  color: purple;
+  font-size: 2em;
+}
+
+.loading-message img { /* Estilos específicos para la imagen dentro del mensaje */
+  width: 40%;
+  height: 50%;
+  margin-bottom: 10px;
+}
